src/objects/Food_Security_Detail__c.object
<CustomObject>
    <description>Food Security Details for the CKW 3.0 Focus Farmers</description>
    <fields>
        <fullName>Average_No_of_Meals_Consumed_Daily_by_HH__c</fullName>
        <description>On average how many meals does your household consume daily</description>
        <inlineHelpText>On average how many meals does your household consume daily</inlineHelpText>
        <label>Average No of Meals Consumed Daily by HH</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At least 3 meals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Focus_Farmer__c</fullName>
        <label>Focus Farmer</label>
        <referenceTo>Focus_Farmer__c</referenceTo>
        <relationshipLabel>Food Security Details</relationshipLabel>
        <relationshipName>Food_Security_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HH_Member_Slept_Hungry_Not_Enough_Food__c</fullName>
        <description>In the past [4 weeks/30 days] did you or any household member go to sleep at night hungry because there was
not enough food?</description>
        <inlineHelpText>In the past [4 weeks/30 days] did you or any household member go to sleep at night hungry because there was
not enough food?</inlineHelpText>
        <label>HH Member Slept Hungry Not Enough Food</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HH__c</fullName>
        <description>Does your household sometimes has surplus Banana/Coffee/Maize for market</description>
        <inlineHelpText>Does your household sometimes has surplus Banana/Coffee/Maize for market</inlineHelpText>
        <label>HH sometimes has surplus food for market</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rarely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All the time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HH_has_food_reserves_of_stored_food__c</fullName>
        <description>Does your household have food reserves in from of stored food?</description>
        <inlineHelpText>Does your household have food reserves in from of stored food?</inlineHelpText>
        <label>HH has food reserves of stored food</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HH_member_last_4_weeks_starved_whole_day__c</fullName>
        <description>In the past [4 weeks/30 days] did you or any household member go a whole day and night without eating
anything at all because there was not enough food?</description>
        <inlineHelpText>In the past [4 weeks/30 days] did you or any household member go a whole day and night without eating
anything at all because there was not enough food?</inlineHelpText>
        <label>HH member last 4 weeks starved whole day</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Household_has_enough_food_to_eat__c</fullName>
        <label>Household has enough food to eat?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_often_HH_member_slept_hungry_4_weeks__c</fullName>
        <label>How often HH member slept hungry 4 weeks</label>
        <picklist>
            <picklistValues>
                <fullName>Rarely (1-2 times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes (3-10 times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Often (more than 10 times)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_often_HH_member_starved_last_4_weeks__c</fullName>
        <label>How often HH member starved last 4 weeks</label>
        <picklist>
            <picklistValues>
                <fullName>Rarely (1-2 times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes (3-10 times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Often (more than 10 times)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_often_no_food_in_last_4_weeks__c</fullName>
        <description>How often did this happen in the last 4 weeks/30 days)?</description>
        <inlineHelpText>How often did this happen in the last 4 weeks/30 days)?</inlineHelpText>
        <label>How often no food in last 4 weeks</label>
        <picklist>
            <picklistValues>
                <fullName>Rarely (1-2 times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes (3-10 times)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Often (more than 10 times)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Food_Source_for_Household__c</fullName>
        <label>Main Food Source for Household</label>
        <picklist>
            <picklistValues>
                <fullName>From market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Own garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>From relatives /neighbors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Food_in_house_in_the_past_4_weeks__c</fullName>
        <description>In the past [4 weeks/30 days] was there a time when there was no food to eat of any kind in your house
because of lack of resources to get food?</description>
        <inlineHelpText>In the past [4 weeks/30 days] was there a time when there was no food to eat of any kind in your house
because of lack of resources to get food?</inlineHelpText>
        <label>No Food in house in the past 4 weeks</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Types_of_Food_Reserves_in_Household__c</fullName>
        <label>Types of Food Reserves in Household</label>
        <picklist>
            <picklistValues>
                <fullName>Food in store or crib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food in the garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Food Security Detail</label>
    <nameField>
        <displayFormat>FSN{YYYY}{MM}{DD}{0}</displayFormat>
        <label>Food Security Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Food Security Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>